# find-knockouts

./: LICENSE  README.md  find-knockouts.cabal  stack.yaml
app/: Main.hs
src/: Knockout.hs  Parsers.hs  Pheno.hs  Types.hs  Utils.hs  VariantMapping.hs  Vcf.hs
test/: Main.hs
