name:                find-knockouts
version:             0.1.0.0
synopsis:            Find knockouts in a VCF file
-- description:
homepage:            https://github.com/Helkafen/find-knockouts#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          arnaudpourseb@gmail.com
copyright:           2020 Sébastian Méric de Bellefon
category:            bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable find-knockouts
  hs-source-dirs:      src,app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  default-extensions: OverloadedStrings ExtendedDefaultRules
  build-depends:
      QuickCheck
    , attoparsec
    , base
    , bytestring
    , containers
    , either-unwrap
    , errors
    , mtl
    , protolude
    , text
    , vector
    , zlib
  other-modules:
     Knockout
    , Parsers
    , Types
    , Utils
    , VariantMapping
    , Vcf

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
      test, src
  default-extensions: OverloadedStrings
  build-depends:
      base
    , QuickCheck
    , tasty
    , attoparsec
    , base
    , bytestring
    , containers
    , either-unwrap
    , errors
    , mtl
    , protolude
    , text
    , vector
    , zlib
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck
  other-modules:
     Knockout
    , Parsers
    , Types
    , Utils
    , VariantMapping
    , Vcf

